<resources>
    <string name="app_name">TapToTaste</string>
    <string name="password_hint">Password</string>
    <string name="login_label">Login</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="register_label">Create New Account</string>
    <string name="login_failed_label">Invalid Credentials</string>
    <string name="select_account">Account Type</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="no_hint">Door No</string>
    <string name="street_hint">Street</string>
    <string name="area_hint">Area</string>
    <string name="state_hint">State</string>
    <string name="pin_code_hint">Pincode</string>
    <string name="btn_signup_text">Sign up</string>
    <string name="btn_next_text">Next</string>
    <string name="mobile_no_hint">Mobile No</string>
    <string name="select_hotel">Hotel Type</string>
    <string name="item_dialog_title">Add Item</string>
    <string name="item_dialog_add">Add</string>
    <string name="item_dialog_cancel">Cancel</string>
    <string name="item_name_hint">Item Name</string>
    <string name="item_price_hint">Item Price</string>
    <string name="veg_text">Veg</string>
    <string name="spinner_value_non_veg">Non-Veg</string>
    <string name="spinner_value_customer_account">Customer Account</string>
    <string name="spinner_value_hotel_account">Hotel Account</string>
    <string name="spinner_value_delivery_person_account">Delivery Person Account</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="tab_title_home">Home</string>
    <string name="tab_title_order">My Orders</string>
    <string name="tab_title_profile">Profile</string>
    <string name="btn_select_image_text">Select Image</string>
    <string name="item_dialog_title_update">Update Item</string>
    <string name="update_label">Update</string>
    <string name="address_hint">Address</string>
    <string name="logout_label">Logout</string>
    <string name="search_label">Search</string>
    <string name="hotel_label">Hotel</string>
    <string name="Food_label">Food</string>
    <string name="btn_place_order">Place Order</string>
    <string name="btn_rate_text">Rate</string>
    <string name="profile_label">Profile</string>
    <string name="profile_screen_title">My Profile</string>
    <string name="incorrect_password_text">The password you have entered is incorrect</string>
    <string name="ok_label">OK</string>
    <string name="create_new_account_text">Create New Account</string>
    <string name="update_account_text">Update Profile</string>
    <string name="my_orders_text">My Orders</string>
    <string name="price_text">Price</string>
    <string name="star_text">Star</string>
    <string name="rating_text">Rating</string>
    <string name="sort_by_text">Sort</string>
    <string name="order_summary_text">Order Summary</string>
    <string name="btn_go_back">Go Back</string>
    <string name="btn_view_cart">View Cart</string>
    <string name="filter_by_text">Filter</string>
    <string name="none_text">None</string>
    <string name="apply_text">Apply</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="empty_order">You Have nothing ordered in your plate</string>
    <string name="bill_details_text">Bill Details</string>
    <string name="customer_details_text">Your Details</string>
    <string name="items_added_text">Items Added</string>
    <string name="deliver_to_text">Deliver To</string>
    <string name="all_restaurants_text">All Restaurants</string>
    <string name="bullet_indicator">•</string>
    <string name="top_rated_restaurants_text">Top Rated Restaurants</string>
    <string name="random_hotels_text">Not sure? Let us decide for you</string>
    <string name="categories_text">Looking for Something Specific?</string>
    <string name="menu_text">Menu</string>
    <string name="categories_title">Select a Category</string>
    <string name="search_text">Search</string>
    <string name="food_label">Food</string>
    <string name="let_s_tap_to_taste_text">Let\'s Tap to Taste</string>
    <string name="my_favorites_text">My Favorites</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="you_have_not_added_favorite_restaurants_text">You have not added favorite restaurants</string>
    <string name="clear_cart_label">Replace Cart Items?</string>
    <string name="clear_cart_description">Your cart already contains items. Do you want to replace it?</string>
    <string name="no_label">No</string>
    <string name="replace_label">Replace</string>
    <string name="empty_ratings">0.0</string>
    <string name="home_welcome_banner">Hi, %1$s</string>
    <string name="average_ratings_with_total_ratings">%1$.1f (%2$d ratings)</string>
    <string name="notification_channel_id">Food Delivery System</string>
    <string name="notification_channel_name">My Channel</string>
    <string name="notification_content_title">TapToTaste</string>
    <string name="notification_content_text">Your Order is On the way</string>

    <string name="item_price">₹ %1$d</string>
    <string name="item_quantity">Qty : %1$d</string>
    <string name="all_items_text">All Items</string>
    <string name="view_cart_text">View Cart</string>
    <string name="view_cart_with_price">View Cart - ₹ %1$d</string>
    <string name="total_items_added">%1$d Items Added</string>
    <string name="place_order_with_price">Place Order - ₹ %1$d</string>
    <string name="to_pay_with_price">To Pay - ₹ %1$d</string>
    <string name="customer_address">No. %1$d, %2$s, %3$s, %4$s, %5$d</string>
    <string name="ordered_items_total_price">Total Price - ₹ %1$d</string>
    <string name="mobile_no_already_exists_text">Mobile number already exists</string>
    <string name="active_orders_text">Active Orders</string>
    <string name="canceled_orders_text">Canceled Orders</string>
    <string name="delivered_orders_text">Delivered Orders</string>
    <string name="btn_cancel_order">Cancel Order</string>
    <string name="order_cancel_timer">0%1$d:%2$s%3$d</string>
    <string name="no_items_found">Oops...No Items Found</string>
    <string name="add">Add</string>

</resources>