<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:background="@drawable/bottom_sheet_close_indicator"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_filter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/sort_by_text"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintWidth_percent="0.95"
        android:background="@color/gray_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_title"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_title">
        <RadioButton
            android:id="@+id/rb_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorPrimary"
            android:text="@string/rating_text"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:padding="12dp"/>
        <RadioButton
            android:id="@+id/rb_price_low_to_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorPrimary"
            android:text="@string/price_low_to_high"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:padding="12dp"/>
        <RadioButton
            android:id="@+id/rb_price_high_to_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorPrimary"
            android:text="@string/price_high_to_low"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:padding="12dp"/>
        <RadioButton
            android:id="@+id/rb_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorPrimary"
            android:text="@string/none_text"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:padding="12dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.45"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/apply_text"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:textColor="?attr/colorOnPrimary"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>