<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_failed_label"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_password_text"
        android:textColor="?android:textColorTertiary"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:textColorTertiary"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_message"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.65"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/ok_label"
        android:textColor="?attr/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_effect_transparent_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"/>


</androidx.constraintlayout.widget.ConstraintLayout>