<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cl_update_profile"
        android:background="?android:windowBackground">

        <TextView
            android:id="@+id/tv_page_title"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/update_account_text"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ivName"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/baseline_account_box_24"
            app:layout_constraintTop_toTopOf="@id/til_name"
            app:layout_constraintBottom_toBottomOf="@id/til_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/til_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/name_hint"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/error_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivName"
            app:layout_constraintTop_toBottomOf="@id/tv_page_title"
            app:layout_constraintBottom_toTopOf="@+id/til_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="?android:textColorPrimary"
                android:maxLength="20"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivAddress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_location_on_24"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/til_no"
            app:layout_constraintBottom_toBottomOf="@id/til_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/til_no" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/no_hint"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/error_color"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivAddress"
            app:layout_constraintTop_toBottomOf="@+id/til_name"
            app:layout_constraintBottom_toTopOf="@+id/til_street">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textSize="20sp"
                android:textColor="?android:textColorPrimary"
                android:maxLength="3"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_street"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/street_hint"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/error_color"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/til_no"
            app:layout_constraintTop_toBottomOf="@+id/til_no"
            app:layout_constraintBottom_toTopOf="@+id/til_area">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_street"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="?android:textColorPrimary"
                android:maxLength="20"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/area_hint"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/error_color"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/til_no"
            app:layout_constraintTop_toBottomOf="@+id/til_street"
            app:layout_constraintBottom_toTopOf="@+id/til_state">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="?android:textColorPrimary"
                android:maxLength="20"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/state_hint"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/error_color"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/til_no"
            app:layout_constraintTop_toBottomOf="@+id/til_area"
            app:layout_constraintBottom_toTopOf="@+id/til_pin_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="?android:textColorPrimary"
                android:maxLength="20"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pin_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent"
            android:hint="@string/pin_code_hint"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/error_color"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/til_no"
            app:layout_constraintTop_toBottomOf="@+id/til_state"
            app:layout_constraintBottom_toTopOf="@+id/btn_update" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pin_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textSize="18sp"
                android:textColor="?android:textColorPrimary"
                android:maxLength="6"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="50dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/button_background"
            android:text="@string/update_label"
            android:textColor="?attr/colorOnPrimary"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/gl_margin_bottom"
            app:layout_constraintTop_toBottomOf="@+id/til_pin_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.4"
            app:backgroundTint="@null"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_margin_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.02" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
