<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/cl_view_orders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:windowBackground">

        <ImageView
            android:id="@+id/iv_empty_order"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:src="@drawable/empty_order"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_empty_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/empty_order"
            android:textColor="?android:textColorPrimary"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_empty_order" />

        <TextView
            android:id="@+id/tv_active_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active_orders_text"
            android:textSize="20sp"
            android:textColor="?android:textColorSecondary"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rv_active_orders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_active_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_active_orders"/>

        <TextView
            android:id="@+id/tv_cancelled_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/canceled_orders_text"
            android:textSize="20sp"
            android:textColor="?android:textColorSecondary"
            android:textStyle="bold"
            android:paddingVertical="10dp"
            android:visibility="invisible"
            android:paddingStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_active_orders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cancelled_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cancelled_orders"/>

        <TextView
            android:id="@+id/tv_delivered_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivered_orders_text"
            android:textSize="20sp"
            android:textColor="?android:textColorSecondary"
            android:textStyle="bold"
            android:paddingVertical="10dp"
            android:visibility="invisible"
            android:paddingStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/rv_cancelled_orders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_delivered_orders"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="80dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_delivered_orders"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
